--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <button id="pwaInstallBtn" class="glass-button">
                 Installer
             </button>
-            <button id="pwaLaterBtn" class="glass-button">
+            <button id="pwaDismissBtn" class="glass-button">
                 Plus tard
             </button>
         </div>
@@ -175,9 +175,9 @@
                 <span class="material-icons" aria-hidden="true">settings</span>
                 Paramètres du player
             </h2>
-            <button id="closeSettings" class="glass-button">
-        <span class="material-icons">close</span>
-			</button>
+            <button id="settingsCloseBtn" class="glass-button">
+                <span class="material-icons">close</span>
+            </button>
         </div>
 
         <div style="font-size:0.85rem; display:flex; flex-direction:column; gap:12px;">
