--- a/index.html
+++ b/index.html
@@ -187,6 +187,15 @@
         </div>
 
         <div class="equalizer-content">
+            <!-- Note d'information -->
+            <div style="background: rgba(124, 92, 255, 0.2); padding: 12px; border-radius: 12px; font-size: 0.85rem; margin-bottom: 16px; border: 1px solid rgba(124, 92, 255, 0.4);">
+                <strong>🎚️ Égaliseur audio</strong><br>
+                <span style="font-size: 0.8rem; opacity: 0.9;">
+                ✅ Compatible avec la plupart des radios<br>
+                ⚠️ Si certaines radios ne fonctionnent pas avec l'égaliseur, c'est normal (restrictions CORS)
+                </span>
+            </div>
+
             <!-- Préréglages -->
             <div class="equalizer-presets">
                 <button class="preset-btn glass-button active" data-preset="flat">Normal</button>
