--- a/index.html
+++ b/index.html
@@ -246,7 +246,19 @@
                     <span>Reprendre automatiquement la dernière radio au démarrage</span>
                 </label>
                 <p>
-                    La dernière radio écoutée sera relancée quand vous ouvrez l’application.
+                    La dernière radio écoutée sera relancée quand vous ouvrez l'application.
+                </p>
+            </section>
+
+            <!-- Onglet de démarrage -->
+            <section>
+                <h3>Onglet de démarrage</h3>
+                <label style="display:flex; align-items:center; gap:8px; cursor:pointer;">
+                    <input type="checkbox" id="startOnFavoritesCheckbox">
+                    <span>Démarrer sur l'onglet Favoris</span>
+                </label>
+                <p>
+                    L'application s'ouvrira directement sur vos radios favorites.
                 </p>
             </section>
         </div>
