--- a/index.html
+++ b/index.html
@@ -243,9 +243,11 @@
                 </div>
                 <div style="display:flex; gap:8px; margin-bottom:6px;">
                     <button id="sleepTimerStartBtn" class="glass-button">
+                        <span class="material-icons">timer</span>
                         Démarrer le minuteur
                     </button>
-                    <button id="sleepTimerCancelBtn" class="glass-button">
+                    <button id="sleepTimerCancelBtn" class="glass-button" style="display: none;">
+                        <span class="material-icons">close</span>
                         Annuler
                     </button>
                 </div>
