--- a/index.html
+++ b/index.html
@@ -241,14 +241,14 @@
                         <option value="120">2 h</option>
                     </select>
                 </div>
-                <div style="display:flex; gap:8px; margin-bottom:6px;">
-                    <button id="sleepTimerStartBtn" class="glass-button">
-                        <span class="material-icons">timer</span>
-                        Démarrer le minuteur
+                <div style="display: flex; gap: 8px; margin-bottom: 6px; width: 100%;">
+                    <button id="sleepTimerStartBtn" class="glass-button" style="flex: 1;">
+                        <span class="material-icons" style="font-size: 20px;">timer</span>
+                        <span>Démarrer le minuteur</span>
                     </button>
-                    <button id="sleepTimerCancelBtn" class="glass-button" style="display: none;">
-                        <span class="material-icons">close</span>
-                        Annuler
+                    <button id="sleepTimerCancelBtn" class="glass-button" style="flex: 1; display: none;">
+                        <span class="material-icons" style="font-size: 20px;">close</span>
+                        <span>Annuler</span>
                     </button>
                 </div>
                 <p id="sleepTimerInfo">
