--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
 </head>
-<body>      
+<body class="preload">      
     <!-- Bannière d'installation PWA -->
     <div id="pwaInstallBanner" class="pwa-install-banner">
     <div style="display:flex; align-items:center; gap:12px;">
