--- a/index.html
+++ b/index.html
@@ -76,10 +76,12 @@
 			Radio Player Pro
 			</h1>
 			<div style="display: flex; gap: 8px; align-items: center;">
-				<button class="theme-toggle-btn glass-button" id="themeToggleBtn" title="Changer de thème">
+				<button class="theme-toggle-btn glass-button" id="themeToggleBtn" 
+        title="Changer de thème" 
+        aria-label="Changer de thème">
 					<span class="material-icons">dark_mode</span>
 				</button>
-				<button class="settings-btn glass-button" id="settingsBtn">
+				<button class="settings-btn glass-button" id="settingsBtn" aria-label="Ouvrir les paramètres">
 				<span class="material-icons">settings</span>
 				<!-- Petit indicateur de minuteur actif -->
 				<span id="sleepTimerIndicator" class="sleep-timer-indicator" aria-hidden="true"></span>
