--- a/index.html
+++ b/index.html
@@ -78,8 +78,14 @@
         <!-- Header avec effet glass -->
         <header class="app-header glass-effect">
             <h1 class="app-title">
-                <span class="material-icons" aria-hidden="true">radio</span>
-                Radio Player Pro
+                <div class="header-logo">
+                    <img src="icons/icon-192.png" alt="Logo RadioFM" class="header-icon">
+                    <div class="logo-glow"></div>
+                </div>
+                <div class="header-text">
+                    <span class="app-name">Radio Player Pro</span>
+                    <span class="app-tagline">Vos radios préférées</span>
+                </div>
             </h1>
             <div style="display: flex; gap: 8px; align-items: center;">
                 <button class="theme-toggle-btn glass-button" id="themeToggleBtn" 
