--- a/index.html
+++ b/index.html
@@ -170,6 +170,10 @@
                 <div class="player-details">
                     <h3 class="player-title" id="playerTitle">--</h3>
                     <p class="player-status" id="playerStatus">En pause</p>
+                    <p class="player-now-playing" id="playerNowPlaying" style="display: none;">
+                        <span class="material-icons" style="font-size: 14px; vertical-align: middle;">music_note</span>
+                        <span id="nowPlayingText">--</span>
+                    </p>
                 </div>
             </div>
             
