--- a/index.html
+++ b/index.html
@@ -507,6 +507,42 @@
                     </p>
                 </section>
 
+				<!-- Thème couleur -->
+                <section>
+                    <h3>🎨 Thème couleur</h3>
+                    <p>Choisissez votre couleur préférée</p>
+                    <div class="theme-color-grid" id="themeColorGrid">
+                        <button class="theme-color-btn active" data-theme="default" title="Violet (défaut)">
+                            <span class="theme-color-preview" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);"></span>
+                            <span class="theme-color-name">Violet</span>
+                        </button>
+                        <button class="theme-color-btn" data-theme="ocean" title="Bleu Océan">
+                            <span class="theme-color-preview" style="background: linear-gradient(135deg, #0077b6 0%, #023e8a 100%);"></span>
+                            <span class="theme-color-name">Océan</span>
+                        </button>
+                        <button class="theme-color-btn" data-theme="nature" title="Vert Nature">
+                            <span class="theme-color-preview" style="background: linear-gradient(135deg, #2d6a4f 0%, #1b4332 100%);"></span>
+                            <span class="theme-color-name">Nature</span>
+                        </button>
+                        <button class="theme-color-btn" data-theme="sunset" title="Coucher de Soleil">
+                            <span class="theme-color-preview" style="background: linear-gradient(135deg, #f77f00 0%, #d62828 100%);"></span>
+                            <span class="theme-color-name">Sunset</span>
+                        </button>
+                        <button class="theme-color-btn" data-theme="rose" title="Rose">
+                            <span class="theme-color-preview" style="background: linear-gradient(135deg, #ff6b9d 0%, #c44569 100%);"></span>
+                            <span class="theme-color-name">Rose</span>
+                        </button>
+                        <button class="theme-color-btn" data-theme="turquoise" title="Turquoise">
+                            <span class="theme-color-preview" style="background: linear-gradient(135deg, #00cec9 0%, #0984e3 100%);"></span>
+                            <span class="theme-color-name">Turquoise</span>
+                        </button>
+                        <button class="theme-color-btn" data-theme="midnight" title="Minuit">
+                            <span class="theme-color-preview" style="background: linear-gradient(135deg, #2c3e50 0%, #1a1a2e 100%);"></span>
+                            <span class="theme-color-name">Minuit</span>
+                        </button>
+                    </div>
+                </section>
+				
                 <!-- Onglet de démarrage -->
                 <section>
                     <h3>Onglet de démarrage</h3>
