--- a/index.html
+++ b/index.html
@@ -514,7 +514,8 @@
                     <div class="theme-color-grid" id="themeColorGrid">
                         <button class="theme-color-btn active" data-theme="default" title="Violet (défaut)">
                             <span class="theme-color-preview" style="background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);"></span>
-                            <span class="theme-color-name">Violet</span>
+                            <span class="theme-color-name">Défaut</span>
+                            <span class="theme-default-badge">⭐</span>
                         </button>
                         <button class="theme-color-btn" data-theme="ocean" title="Bleu Océan">
                             <span class="theme-color-preview" style="background: linear-gradient(135deg, #0077b6 0%, #023e8a 100%);"></span>
