--- a/index.html
+++ b/index.html
@@ -574,6 +574,8 @@
 
     <!-- Scripts -->
     <script src="app.js"></script>
+    <script src="ios-fixes.js"></script>
+    <script src="ios-install.js"></script>
     <script>
         // Enregistrement du Service Worker
         if ('serviceWorker' in navigator) {
