--- a/index.html
+++ b/index.html
@@ -573,7 +573,7 @@
     <audio id="audioPlayer" preload="none"></audio>
 
     <!-- Scripts -->
-    <script src="app.js?v=2"></script>
+    <script src="app.js"></script>
     <script src="ios-fixes.js"></script>
     <script src="ios-install.js"></script>
     <script>
